# proof-of-work-cpp

./: CMakeLists.txt  README.md  main.cpp
node_chains/: node1_chain.txt  node2_chain.txt  node3_chain.txt  node4_chain.txt  node5_chain.txt
src/: Block.hpp  BlockChain.hpp  Crypto.hpp  Transaction.hpp  node.cpp
